# projeto_teste_validacao_pep8

./: .pre-commit-config.yaml  README.md  pyproject.toml  teste_black.py  teste_blue.py  teste_flake8.py
src/: teste_bandit.py
