[project]
name = "projeto-teste-validacao-pep8"
version = "0.1.0"
description = ""
authors = [
    {name = "IgorNatann",email = "Igornatan4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
