[project]
name = "projeto-teste-validacao-pep8"
version = "0.1.0"
description = ""
authors = [
    {name = "IgorNatann",email = "Igornatan4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flake8 (>=4.0.0,<5.0.0)",
    "black (==22.1.0)",
    "blue (>=0.9.1,<0.10.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "bandit (>=1.9.3,<2.0.0)"
]

[tool.bandit]
exclude_dirs = [".venv"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort teste_blue.py
black teste_black.py
flake8 teste_flake8.py
bandit teste_bandit.py
"""
